Video player fix: minimize moves player divs off-screen.

--- a/client/stylesheets/_player.styl
+++ b/client/stylesheets/_player.styl
@@ -22,9 +22,16 @@
     color: white
     cursor: pointer
 
-.video-hidden
-  top: 1000px !important
 
+
+.mejs-video.video-hidden
+  top: 0px
+  height: 30px !important
+
+.mejs-media-element.video-hidden,
+.mejs-layers.video-hidden
+  top: 1000px !important
+  
 .player-video-extras.video-hidden
   top: initial !important
   bottom: 0px
